<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>eu.esic.formation.spring.ioc</groupId>
	<artifactId>spring-ioc</artifactId>
	<version>1.0.1-SNAPSHOT</version>
	<name>Tester l'ioc par Spring</name>
	<properties>
		<java.version>11</java.version>
		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
		<spring-testdbunit.version>1.3.0</spring-testdbunit.version>
		<org.dbunit.version>2.5.4</org.dbunit.version>
		<com.github.jmnarloch.version>1.0.1</com.github.jmnarloch.version>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>3.2.2.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>3.2.2.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>3.0.7.RELEASE</version>
		</dependency>
	</dependencies>
</project>